# docs/storage_swagger.yaml
@@ -200,12 +200,18 @@ definitions:
       miner:
         description: Miner address
         type: string
+      miningAttempts:
+        description: Mining attempts
+        type: integer
       timestamp:
         description: The block time when the latest reward event emits
         type: integer
       totalReward:
         description: The total reward amount
         type: number
+      winCount:
+        description: Win count
+        type: integer
     type: object
   storage.MinerInfo:
     properties:
@@ -331,13 +337,16 @@ definitions:
       miner:
         description: Address on blockchain
         type: string
+      miningAttempts:
+        description: Mining attempts
+        type: integer
       rank:
         description: Data ranking
         type: integer
       totalReward:
         description: Reward amount
         type: number
-      totalWinCount:
+      winCount:
         description: Win count
         type: integer
     type: object
